--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "entry-page",
   "version": "1.0.0",
   "description": "",
-  "main": "App.js",
+  "main": "Server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon App"
+    "dev": "nodemon Server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "autoprefix": "^1.0.1",
     "dotenv": "^16.1.4",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
